--- a/CSS/style.css
+++ b/CSS/style.css
@@ -527,6 +527,117 @@ header {
 .contact-content a:hover{
   color: #f0f0e6;
 }
+.about-content img {
+  height: 250px;
+  width: 250px;
+  object-fit: cover;
+  border-radius: 50%;
+}
+.about-me .about-heading {
+  color: #25b79f;
+  font-size: 2rem;
+  font-weight: 600;
+  text-align: center;
+  margin-top: 10px;
+  
+}
+.skills .skills-heading {
+  font-size: 2rem;
+  font-weight: 600;
+  color: #25b79f;
+  text-align: center;
+  margin-top: 20px;
+}
+.about-me {
+  background-color: #07374a;
+  padding: 6rem 0;
+  height: 120vh;
+}
+.education-section {
+  background-color: #25b79f;
+  padding: 6rem 0;
+  text-align: center;
+}
+
+.school-text {
+  margin-left: 10px;
+  text-align: left; /* จัดเนื้อหาข้อความด้านซ้าย */
+}
+
+.school-name {
+  font-size: 1.5rem;
+  font-weight: bold; /* ตัวหนา */
+  color: #ffffff;
+}
+
+.school-duration {
+  font-size: 1.2rem;
+  color: #ffffff;
+}
+
+.school a {
+  text-decoration: none;
+  color: #25b79f;
+  font-weight: bold;
+  margin-left: 10px;
+}
+
+.school a:hover {
+  border-bottom: 2px solid #25b79f;
+}
+
+.Education-heading {
+  text-align: center;
+  color: #07374a;
+  font-size: 2rem;
+}
+
+.school-info {
+  display: flex;
+  text-align: center;
+  font-size: 1.5rem;
+  align-items: center; /* จัดให้เนื้อหาแสดงตรงกลางแนวตั้ง */
+}
+
+.school-icon {
+  width: 10%;
+  height: auto;
+  margin-left: 10%;
+  display: flex;
+}
+
+.topnav {
+  background-color: #33333300;
+  overflow: hidden;
+}
+
+/* Style the links inside the navigation bar */
+.topnav a {
+  float: right;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+/* Change the color of links on hover */
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Add an active class to highlight the current page */
+.topnav  {
+  background-color: #04aa6d00;
+  color: white;
+}
+
+/* Hide the link that should open and close the topnav on small screens */
+.topnav .icon {
+  display: none;
+}
 
 /* ////......Media query......//// */
 
@@ -596,33 +707,6 @@ header {
     width: 100%;
   }
 }
-.about-content img {
-  height: 250px;
-  width: 250px;
-  object-fit: cover;
-  border-radius: 50%;
-}
-.about-me .about-heading {
-  color: #25b79f;
-  font-size: 2rem;
-  font-weight: 600;
-  text-align: center;
-  margin-top: 10px;
-  
-}
-.skills .skills-heading {
-  font-size: 2rem;
-  font-weight: 600;
-  color: #25b79f;
-  text-align: center;
-  margin-top: 20px;
-}
-.about-me {
-  background-color: #07374a;
-  padding: 6rem 0;
-  height: 120vh;
-}
-
 
 @media (min-width: 501px) and (max-width: 768px) {
   html {
@@ -740,96 +824,12 @@ header {
   }
 }
 
-@media (orientation: landscape) and (max-height: 500px) {
+/* @media (orientation: landscape) and (max-height: 500px) {
   .header {
     height: 90vmax;
   }
-}
-.education-section {
-  background-color: #25b79f;
-  padding: 6rem 0;
-  text-align: center;
-}
+} */
 
-.school-text {
-  margin-left: 10px;
-  text-align: left; /* จัดเนื้อหาข้อความด้านซ้าย */
-}
-
-.school-name {
-  font-size: 1.5rem;
-  font-weight: bold; /* ตัวหนา */
-  color: #ffffff;
-}
-
-.school-duration {
-  font-size: 1.2rem;
-  color: #ffffff;
-}
-
-.school a {
-  text-decoration: none;
-  color: #25b79f;
-  font-weight: bold;
-  margin-left: 10px;
-}
-
-.school a:hover {
-  border-bottom: 2px solid #25b79f;
-}
-
-.Education-heading {
-  text-align: center;
-  color: #07374a;
-  font-size: 2rem;
-}
-
-.school-info {
-  display: flex;
-  text-align: center;
-  font-size: 1.5rem;
-  align-items: center; /* จัดให้เนื้อหาแสดงตรงกลางแนวตั้ง */
-}
-
-.school-icon {
-  width: 10%;
-  height: auto;
-  margin-left: 10%;
-  display: flex;
-}
-
-.topnav {
-  background-color: #33333300;
-  overflow: hidden;
-}
-
-/* Style the links inside the navigation bar */
-.topnav a {
-  float: right;
-  display: block;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
-
-/* Change the color of links on hover */
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-/* Add an active class to highlight the current page */
-.topnav  {
-  background-color: #04aa6d00;
-  color: white;
-}
-
-/* Hide the link that should open and close the topnav on small screens */
-.topnav .icon {
-  display: none;
-}
 @media screen and (max-width: 600px) {
   .topnav a:not(:first-child) {display: none;}
   .topnav a.icon {
@@ -850,33 +850,6 @@ header {
     float: none;
     display: block;
     text-align: left;
-  }
-}
-@media (max-width: 400.536px) and (max-height: 230.154px) {
-  .about-content .left-content {
-    flex-basis: 100%;
-    text-align: center;
-  }
-  .about-me {
-    background-color: #07374a;
-    padding: 0rem 0;
-    height: 100vh;
-  }
-
-  .skills {
-    width: 100%;
-  }
-
-  .skills-bar {
-    padding: 25px 300px;
-  }
-
-  .skills .skills-heading {
-    font-size: 2rem;
-    font-weight: 600;
-    color: #25b79f;
-    text-align: center;
-    margin-top: 100px;
   }
 }
 
