--- a/CSS/style.css
+++ b/CSS/style.css
@@ -21,54 +21,110 @@ header {
   margin: auto;
 }
 
-/* ////........Navbar.......//// */
-
-.navbar {
-  position: fixed;
-  width: 100%;
-  z-index: 500;
-}
-
-.navbar-container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  height: 64px;
-}
-
-.menu-items {
-  display: flex;
-}
-
-.menu-items li {
-  list-style: none;
-  padding: 1rem;
-}
-
-.menu-items a {
-  text-decoration: none;
-  color: #f0f0e6;
-  font-size: 1.2rem;
-  padding: 0.3rem;
-}
-
-.menu-items a:hover {
-  border-bottom: 2px solid #f0f0e6;
-}
-
-.navbar .logo {
-  order: 1;
-  color: #f0f0e6;
-  font-size: 2rem;
-}
-
 /* ////........Home Content........//// */
+.Education-heading {
+
+font-weight: bolder ;
+
+}
+
+.wrapper {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	gap: 20px;
+	margin: 6% auto 0;
+}
+.single-card {
+	position: relative;
+	width: 280px;
+	height: 400px;
+	margin: 15px;
+	box-shadow: 0 2px 20px rgba(0, 0, 0, 0.5);
+	transition: box-shadow 0.3s ease;
+	overflow: hidden;
+	background: #07374a79;
+	border-radius: 15px;
+	transition: all 0.8s ease-in-out;
+}
+.single-card:hover {
+	transform: translateY(-10px);
+}
+.img-area {
+  position: relative;
+  width: 100%;
+  height: 200px;
+  overflow: hidden;
+  display: flex; /* เพิ่มบรรทัดนี้ */
+  justify-content: center; /* จัดตำแหน่งแนวนอนเป็นกลาง */
+  align-items: center; /* จัดตำแหน่งแนวตั้งเป็นกลาง */
+}
+.img-area img {
+	/* width: 50%; */
+	height: 80%;
+	object-fit: cover;
+	transition: transform 0.3s ease;
+}
+.img-area:hover img {
+	transform: scale(1.1);
+}
+.overlay {
+	position: absolute;
+	top: 0;
+	left: 0;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 174, 255, 0.8);
+	opacity: 0;
+	transition: opacity 0.3s ease;
+}
+.single-card:hover .overlay {
+	opacity: 1;
+}
+.add-to-cart, .view-details {
+	background-color: #fff;
+	color: #333;
+	padding: 10px 15px;
+	border-radius: 4px;
+	font-size: 12px;
+	font-weight: bold;
+	text-transform: uppercase;
+	letter-spacing: 1px;
+	cursor: pointer;
+	transition: background-color 0.3s ease, color 0.3s ease;
+	margin-bottom: 10px;
+}
+.add-to-cart:hover, .view-details:hover {
+	background-color: orangered;
+	color: #fff;
+	border: none;
+}
+.info {
+	padding: 10px;
+	text-align: left;
+	color: #ddd;
+}
+.info h3 {
+  text-align: center;
+	margin: 15px 0 10px;
+	font-size: 20px;
+	font-weight: bold;
+	text-transform: uppercase;
+	font-family: 'Bebas Neue', sans-serif;
+}
+p {
+  text-align: center;
+}
 
 .IMG-ITPE{
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 40%;
+  width: 50%;
 }
 .home-content .name {
   position: absolute;
@@ -107,13 +163,159 @@ header {
 }
 
 /* ////........About Me........//// */
-
 .about-me {
   background-color: #07374a;
-  padding: 6rem 0;
+  padding: 2rem 0;
   height: 100vh;
   
 }
+
+
+/* tablet */
+.about-heading-md{
+text-align: center;
+margin-bottom: 30px;
+color :#25b79f;
+font-weight: b60;
+}
+.about-content-md{
+  font-size: 1.2rem;
+  color: #f0f0e6;
+  padding: 0 2.3rem;
+  text-align: center;
+
+}
+.IMG-person-md{
+  margin-bottom: 25px;
+  height: 250px;
+  width: 250px;
+  object-fit: cover;
+  border-radius: 50%;
+}
+
+.skills-heading-md{
+  text-align: center;
+  color: #25b79f;
+  font-size: 2rem;
+
+}
+.portfolio-md {
+  background: #07374a;
+  padding: 6rem 0;
+  height: 100rem;
+}
+.IMG-ITPE-md{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+  margin-top: 20%;
+}
+/* ---------------------------------------------------------------- */
+
+/* Mobile */
+.about-me-sm .about-content-sm {
+  display: flex;
+  flex-wrap: wrap;
+  align-content: center;
+  justify-content: center;
+}
+.about-me-sm {
+  background-color: #07374a;
+  padding: 2rem 0;
+  height: 120vh;
+}
+.about-content-sm {
+  font-size: 0.7rem;
+  color: #f0f0e6;
+  padding: 0 2.3rem;
+  text-align: center;
+}
+.about-me-sm .about-heading-sm {
+  color: #25b79f;
+  font-size: 2rem;
+  font-weight: 600;
+  text-align: center;
+}
+
+.about-content-sm img {
+  margin-bottom:25px;
+  height: 170px;
+  width: 170px;
+  object-fit: cover;
+  border-radius: 50%;
+}
+.skills-heading-sm{
+  text-align: center;
+  color: #25b79f;
+  font-size: 2rem;
+}
+
+.skills-bar-sm {
+  padding: 25px 30px;
+}
+
+.skills-bar-sm .bar-sm {
+  margin: 25px 0;
+}
+
+.skills-bar-sm .bar-sm .info-sm span {
+  font-size: 1rem;
+  font-weight: 500;
+}
+
+.skills-bar-sm .bar-sm .info-sm {
+  margin-bottom: 8px;
+  color: #f0f0e6;
+  text-align: left;
+}
+
+.skills-bar-sm .bar-sm .progress-line-sm {
+  position: relative;
+  height: 10px;
+  width: 300px;
+  background: #f0f0f0;
+  border-radius: 10px;
+  transform: scaleX(0);
+  transform-origin: left;
+  animation: animate 1s cubic-bezier(1, 0, 0.5, 1) forwards;
+}
+
+.bar-sm .progress-line-sm span {
+  position: absolute;
+  background: #25b79f;
+  height: 100%;
+  border-radius: 10px;
+  transform: scaleX(0);
+  transform-origin: left;
+  animation: animate 1s 1s cubic-bezier(1, 0, 0.5, 1) forwards;
+}
+.progress-line-sm .html-sm {
+  width: 50%;
+}
+.progress-line-sm .css-sm {
+  width: 40%;
+}
+.progress-line-sm .bootstrap-sm {
+  width: 40%;
+}
+.progress-line-sm .javascript-sm {
+  width: 40%;
+}
+.progress-line-sm .c-sm {
+  width: 30%;
+}
+
+.education {
+  background-color: #25b79f;
+  padding: 6rem 0;
+  text-align: center;
+  height: 240vh;
+}
+
+/* ---------------------------------------------------------------- */
+
+
 
 .about-me .about-heading {
   color: #25b79f;
@@ -203,7 +405,7 @@ header {
 
 @keyframes animate {
   100% {
-    transform: scaleX(1);
+    transform: scaleX(1.1);
   }
 }
 
@@ -264,6 +466,8 @@ header {
 .progress-line .c::after {
   content: "30%";
 }
+
+
 
 .navbar.solid {
   background-color: #07374a;
@@ -527,33 +731,7 @@ header {
 .contact-content a:hover{
   color: #f0f0e6;
 }
-.about-content img {
-  height: 250px;
-  width: 250px;
-  object-fit: cover;
-  border-radius: 50%;
-}
-.about-me .about-heading {
-  color: #25b79f;
-  font-size: 2rem;
-  font-weight: 600;
-  text-align: center;
-  margin-top: 10px;
-  
-}
-.skills .skills-heading {
-  font-size: 2rem;
-  font-weight: 600;
-  color: #25b79f;
-  text-align: center;
-  margin-top: 20px;
-}
-.about-me {
-  background-color: #07374a;
-  padding: 6rem 0;
-  height: 120vh;
-}
-.education-section {
+.education {
   background-color: #25b79f;
   padding: 6rem 0;
   text-align: center;
@@ -561,15 +739,14 @@ header {
 }
 
 .school-text {
-  margin-left: 3.5vh;
+  margin-left: 10px;
   text-align: left; /* จัดเนื้อหาข้อความด้านซ้าย */
 }
 
 .school-name {
-  font-size: 1.8rem;
-  font-weight: 600; /* ตัวหนา */
+  font-size: 1.5rem;
+  font-weight: bold; /* ตัวหนา */
   color: #ffffff;
-  
 }
 
 .school-duration {
@@ -599,242 +776,14 @@ header {
   text-align: center;
   font-size: 1.5rem;
   align-items: center; /* จัดให้เนื้อหาแสดงตรงกลางแนวตั้ง */
-  padding-bottom: 4vh;
 }
 
 .school-icon {
-  width: 7.5%;
+  width: 10%;
   height: auto;
-  margin-left: 27%;
+  margin-left: 30%;
   display: flex;
-}
-
-.topnav {
-  background-color: #33333300;
-  overflow: hidden;
-}
-
-/* Style the links inside the navigation bar */
-.topnav a {
-  float: right;
-  display: block;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
-
-/* Change the color of links on hover */
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-/* Add an active class to highlight the current page */
-.topnav  {
-  background-color: #04aa6d00;
-  color: white;
-  
-}
-
-/* Hide the link that should open and close the topnav on small screens */
-.topnav .icon {
-  display: none;
 }
 
 /* ////......Media query......//// */
-
-@media (max-width: 1200px) {
-  .about-content .left-content {
-    flex-basis: 43%;
-    text-align: center;
-}
-.about-me {
-  background-color: #07374a;
-  padding: 10rem 0;
-  height: 120vh;
-}
-.school-icon {
-  width: 7.5%;
-  height: auto;
-  margin-left: 20%;
-  display: flex;
-}
-.Education-heading {
-  text-align: center;
-  color: #07374a;
-  font-size: 2rem;
-  padding-bottom: 3rem;
-}
-.IMG-ITPE {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 48%;
-}
-}
-
-@media (max-width: 991px) {
-  .about-content {
-    display: flex;
-    justify-content: center;
-  }
-
-  .about-content .left-content {
-    flex: 0 0 80%;
-    text-align: center;
-  }
-  .about-me {
-    background-color: #07374a;
-    padding: 10rem 0;
-    height: 80rem;
-}
-}
-
-
-@media (max-width: 777px) {
-.school-icon {
-    width: 15%;
-    height: auto;
-    margin-left: 2%;
-    display: flex;
-}
-.school-name {
-  font-size: 1.5rem;
-  font-weight: 600;
-  color: #ffffff;
-}
-.education{
-  padding: 10%;
-  padding-top: 1px;
-
-}
-.Education-heading {
-  text-align: center;
-  color: #07374a;
-  font-size: 2.5rem;
-}
-.IMG-ITPE {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 69%;
-}
-}
-
-@media (max-width: 520px) {
-  .skills {
-    width: 500px; /* ปรับความกว้างตามที่คุณต้องการ */
-    margin-top: 7rem;
-}
-.skills-bar .bar .progress-line {
-  position: relative;
-  height: 10px;
-  width: 400px;
-  background: #f0f0f0;
-  border-radius: 10px;
-  transform: scaleX(0);
-  transform-origin: left;
-  animation: animate 1s cubic-bezier(1, 0, 0.5, 1) forwards;
-}
-.about-me .about-content {
-  display: flex;
-  flex-wrap: wrap;
-  width: 450px;
-  margin: 0 auto; /* จัดกลางแนวนอน */
-}
-.about-me {
-  background-color: #07374a;
-  padding: 5rem 0;
-  height: 100rem;
-}
-.school-name {
-  font-size: 1rem;
-  font-weight: 600;
-  color: #ffffff;
-}
-.school-icon {
-  width: 20%;
-  height: auto;
-  margin-left: 2%;
-  display: flex;
-}
-.IMG-ITPE {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 80%;
-}
-}
-
-@media (max-width: 462px) {
-  .skills {
-    width: 400px; /* ปรับความกว้างตามที่คุณต้องการ */
-    margin-top: 7rem;
-}
-.about-me .about-content {
-  display: flex;
-  flex-wrap: wrap;
-  width: 400px;
-  margin: 0 auto;
-}
-.skills-bar .bar .progress-line {
-  position: relative;
-  height: 20px;
-  width: 350px;
-  background: #f0f0f0;
-  border-radius: 10px;
-  transform: scaleX(0);
-  transform-origin: left;
-  animation: animate 1s cubic-bezier(1, 0, 0.5, 1) forwards;
-}
-.bar .progress-line span::after {
-  position: absolute;
-  right: 0;
-  top: -28px;
-  color: #07374a;
-  font-size: 10px;
-  font-weight: 700;
-  background: #f0f0f0;
-  padding: 1px 8px;
-  border-radius: 3px;
-}
-}
-
-@media (max-width: 371px) {
-  /* Your styles for 371px and below here */
-}
-
-
-@media screen and (max-width: 600px) {
-  .topnav a:not(:first-child) {display: none;}
-  .topnav a.icon {
-    float: right;
-    display: block;
-  }
-}
-
-/* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
-@media screen and (max-width: 600px) {
-  .topnav.responsive {position: relative;}
-  .topnav.responsive a.icon {
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-  .topnav.responsive a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
-}
-
-
-
-
-
-
-
-
 
